[package]
name = "mnemonic"
version = "0.1.0"
authors = ["Rich Hollenbeck <rghollenbeck@protonmail.com>"]
edition = "2021"
description = "A Rust library for handling BIP-39 mnemonic wordlists."
license = "MIT"
repository = "https://github.com/rghollenbeck/btctools"
documentation = "https://github.com/rghollenbeck/btctools/blob/main/mnemonic/README.md"
homepage = "https://github.com/rghollenbeck/btctools/tree/main/mnemonic"
keywords = ["bip39", "bitcoin", "wallet", "mnemonic"]
categories = ["cryptography", "blockchain", "Bitcoin", "BIP-39"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

